--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="stop_watch_st_2">Sleep Watch</string>
     <string name="clock_seconds">0:00:00</string>
     <string name="clock_rem">00</string>
-    <string name="time_laps_st">Na Times</string>
+    <string name="time_laps_st">Nap Times</string>
     <string name="Grap_Lin_men">Graph Line</string>
     <string name="graph_line">Graph Line</string>
     <string name="cdjm_sleep_tracker_st">The CDJM Sleep Tracker</string>
